--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- <h2>I am passionate about Data Engineering, Cloud Computing, and Generative AI.
                  With a background in information systems and computer engineering, I enjoy exploring the latest technologies and applying them to solve real-world problems. 
                  Let's connect and discover innovative solutions together!</h2> -->
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="images/Indupriya_Resume.pdf" class="btn-rounded-white">Download Resume</a>
             <!-- Social media buttons -->
              <div class="social-buttons">
                 <a href="https://www.linkedin.com/in/indupriya-basireddy/" target="_blank">
