Updated the icons and layout

--- a/index.html
+++ b/index.html
@@ -37,18 +37,21 @@
                 <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
-            </li>
-            <li>
                 <a href="#certifications">Certifications</a>
             </li>
+            <li>
+                <a href="#skills">Skills</a>
+            </li>
+            
         </ul>
     </header>
     <!-- End header -->
 
     <div id="lead">
         <div id="lead-content">
-            <img src="images\profile.jpg" alt="Indupriya Basireddy" style="width:400px;height:auto;border-radius:100%;">
+            <div class="profile-image-container">
+                <img src="images/profile.jpg" alt="Indupriya Basireddy" class="profile-image">
+            </div>
             <h1>Indupriya Basireddy</h1>
             <!-- <h2>I am passionate about Data Engineering, Cloud Computing, and Generative AI.
                  With a background in information systems and computer engineering, I enjoy exploring the latest technologies and applying them to solve real-world problems. 
@@ -60,7 +63,7 @@
                     <img src="images/linkedin.png" alt="LinkedIn">
                  </a>
                 <a href="mailto:indupriyabasireddysm@gmail.com">
-                    <img src="images/email.png" alt="Email">
+                    <img src="images/gmail.png" alt="Email">
                 </a>
                 <a href="https://github.com/indu2106" target="_blank">
                     <img src="images/github.png" alt="GitHub">
@@ -88,9 +91,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am passionate about Data Engineering, Cloud Computing, and Generative AI.
-                 With a background in information systems and computer engineering, I enjoy exploring the latest technologies and applying them to solve real-world problems. 
-                 Let's connect and discover innovative solutions together!
+                        I am passionate about Data Engineering, Cloud Computing, and AI/Machine Learning.
+                 With a background in information systems and computer engineering, I enjoy exploring the latest technologies and applying them to solve real-world problems.
+                 If you're looking for a passionate and skilled data engineer with expertise in cloud technologies, AI/ML, and data engineering, let's connect and discover innovative solutions together!
                     </p>
                 </div>
             </div>
@@ -167,11 +170,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Harnessing Azure for Seamless Data Engineering Solutions</h3>
+                        <h3>Azure-Powered Data Engineering: Streamlining Insights and Efficiency</h3>
                         <p>
                             This project showcases an extensive data engineering solution deployed on Microsoft Azure. Leveraging a suite of Azure services, it establishes a robust data pipeline that systematically transforms raw data into actionable insights. Adhering to the Medallion Architecture for optimal data organization, the project integrates Azure Data Factory, Azure Databricks, Azure Synapse Analytics, and Power BI for sophisticated data visualization.
                         </p>
-                        <a href="https://github.com/indu2106/Harnessing-Azure-for-Seamless-Data-Engineering-Solutions">View Project</a>
+                        <a href="https://github.com/indu2106/Azure-Powered-Data-Engineering-Streamlining-Insights-and-Efficiency">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -197,39 +200,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
-        <h2 class="heading">Skills</h2>
-        <ul>
-            <li>Python</li>
-            <li>SQL</li>
-            <li>R</li>
-            <li>Scala</li>
-            <li>Bash</li>
-            <li>T-SQL</li>
-            <li>Machine Learning</li>
-            <li>Generative AI</li>
-            <li>Large Language Models(LLM)</li>
-            <li>AWS Bedrock</li>
-            <li>AWS Services</li>
-            <li>PostgreSQL</li>
-            <li>MongoDB</li>
-            <li>Hbase</li>
-            <li>Cassandra</li>
-            <li>Azure</li>
-            <li>Snowflake</li>
-            <li>Apache Spark</li>
-            <li>Talend</li>
-            <li>Docker</li>
-            <li>Kubernetes</li>
-            <li>Tableau</li>
-            <li>Power BI</li>
-            <li>Git</li>
-            <li>Terraform</li>
-            <li>Alteryx</li>
-            <li>Jira</li>
-        </ul>
-    </div>
-    <!-- End #skills -->
+    
 
     <div id="certifications" class="background-alt" style="text-align: center;">
         <h2 class="heading">Certifications</h2>
@@ -262,6 +233,39 @@
         </div>
     </div>
     <!-- End #certifications -->
+    <div id="skills">
+        <h2 class="heading">Skills</h2>
+        <ul>
+            <li>Python</li>
+            <li>SQL</li>
+            <li>R</li>
+            <li>Scala</li>
+            <li>Bash</li>
+            <li>T-SQL</li>
+            <li>Machine Learning</li>
+            <li>Generative AI</li>
+            <li>Large Language Models(LLM)</li>
+            <li>AWS Bedrock</li>
+            <li>AWS Services</li>
+            <li>PostgreSQL</li>
+            <li>MongoDB</li>
+            <li>HBase</li>
+            <li>Apache Cassandra</li>
+            <li>Azure</li>
+            <li>Snowflake</li>
+            <li>Apache Spark</li>
+            <li>Talend</li>
+            <li>Docker</li>
+            <li>Kubernetes</li>
+            <li>Tableau</li>
+            <li>Power BI</li>
+            <li>Git</li>
+            <li>Terraform</li>
+            <li>Alteryx</li>
+            <li>Jira</li>
+        </ul>
+    </div>
+    <!-- End #skills -->
     <!-- <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
