--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="June 2023 – May 2024">
+            <div data-date="June 2023 - May 2024">
                 <h3>Graduate Research Assistant</h3>
                 <h4>The University of Texas at Arlington</h4>
                 <ul>
-                    <li>Leveraged Alteryx for data cleansing, validation, and analysis on student data, resulting in a 40% improvement in data quality and enabling insights that led to an increase in student retention rate.</li>
-                    <li>Developed interactive Tableau dashboards for student data analysis, facilitating a 20% reduction in decision-making turnaround time for enrollment and retention strategies.</li>
+                    <li>Spearheaded the integration generative AI models (GPT-3, Claude) into enterprise solutions, enhancing search functionalities and enabling precise document retrieval, thereby optimizing the Q&A System capabilities.</li>
+                    <li>Achieved up to 60% faster completion times for complex search and document analysis tasks using generative AI technologies.</li>
+                    <li>Developed and deployed prompting techniques and fine-tuning strategies for large language models (LLMs), tailored to specific domains, resulting in improved accuracy and relevance of answers by up to 25%.</li>
+                    <li>Utilized AWS Bedrock to facilitate efficient deployment and scaling of AI models in production, orchestrating cloud resources for seamless and scalable model deployment.</li>
                 </ul>
             </div>
 
@@ -117,9 +119,9 @@
                 <h3>Data Engineer</h3>
                 <h4>Concepo Engineering and Technologies Pvt Ltd</h4>
                 <ul>
-                    <li>Spearheaded the design and implementation of highly scalable ETL pipelines utilizing Python, Apache Spark, and AWS services (S3, Redshift, Glue). This optimized data ingestion and transformation, resulting in 2x faster data processing time.</li>
-                    <li>Designed and executed data models and schemas using AWS Redshift to support business intelligence and analytics requirements, resulting in a 30% improvement in database query performance.</li>
-                    <li>Implemented data profiling techniques to identify and rectify inconsistencies in data sources, resulting in a 20% improvement in data accuracy.</li>
+                    <li>Spearheaded the design and implementation of highly scalable ETL pipelines utilizing Python and AWS services (S3, Redshift, Glue). This optimized data ingestion and transformation, resulting in 2x faster data processing time.</li>
+                    <li>Engineered data models and schemas using AWS Redshift to support business intelligence and analytics requirements, resulting in a 30% improvement in database query performance.</li>
+                    <li>Crafted interactive dashboards using Tableau to visualize and analyze data, enhancing decision-making and insights for business stakeholders.</li>
                 </ul>
             </div>
 
@@ -127,9 +129,9 @@
                 <h3>Application Development Associate</h3>
                 <h4>Accenture</h4>
                 <ul>
-                    <li>Streamlined insurance policy data migration by optimizing SQL queries, achieving a 25% reduction in execution time. This accelerated data extraction, analysis, and manipulation for a smoother migration process.</li>
-                    <li>Established comprehensive data migration plans for insurance policies, including profiling, mapping, and cleansing. This resulted in a 30% improvement in efficiency and accuracy, minimizing migration errors.</li>
-                    <li>Collaborated with business analysts and stakeholders in an Agile environment to define migration requirements and acceptance criteria, ensuring project alignment.</li>
+                    <li>Constructed an automated ETL pipeline, migrating data from Oracle databases to S3 using AWS DMS, resulting in a 40% reduction on data migration time.</li>
+                    <li>Processed insurance records using Apache Spark on Amazon EMR, achieving a 50% reduction in data transformation time.</li>
+                    <li>Automated and scheduled daily ETL jobs using Apache Airflow, ensuring a 100% job success rate, and reducing manual intervention by 80%.</li>
                 </ul>
             </div>
         </div>
